--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,9 +3,17 @@
 	font-size: 14px;
 	padding: 15px 25px;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: space-between;
 	height: 100%;
+}
+
+.footer__left {
+	width: 75%;
+}
+
+.footer__right {
+	width: 25%;
 }
 
 .buttons {
@@ -48,7 +56,7 @@
 }
 
 .info {
-	margin-top: auto;
-	width: 45%;
+	margin-top: 15px;
+	width: 100%;
 	line-height: 1.3;
 }
