--- a/src/components/Player/Controls/Controls.module.scss
+++ b/src/components/Player/Controls/Controls.module.scss
@@ -30,7 +30,45 @@ button {
 }
 
 .volume {
+	height: 100%;
+	width: 200px;
+	position: relative;
+
+	button {
+		transform: rotate(90deg);
+	}
+
+	input {
+		width: 150px !important;
+	}
+
+	&:hover {
+		.inputContainer {
+			opacity: 1;
+		}
+	}
+}
+
+.volumeContainer {
+	width: 300px;
+	height: 50px;
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
+	justify-content: space-between;
+	transform: rotate(-90deg);
+	position: absolute;
+	top: -110px;
+	left: -100px;
+}
+
+.inputContainer {
+	width: 200px;
+	height: 50px;
+	background-color: #222222;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 15px;
+	transition: opacity 0.3s ease;
+	opacity: 0;
 }
