--- a/src/components/Aside/Banner/Banner.module.scss
+++ b/src/components/Aside/Banner/Banner.module.scss
@@ -2,9 +2,14 @@
 	width: 250px;
 	height: 250px;
 	margin: 0px auto 50px;
+	padding: 10px;
 
 	img {
 		width: 100%;
 		user-select: none;
+	}
+
+	&:hover {
+		outline: 3px solid #d5ac05;
 	}
 }
