--- a/src/components/Player/Display/Display.module.scss
+++ b/src/components/Player/Display/Display.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+	display: flex;
 	height: 60px;
 }
 
@@ -16,4 +17,21 @@
 
 .author {
 	font-size: 12px;
+}
+
+.img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	width: 50px;
+	height: 100%;
+
+	margin-right: 20px;
+
+	img {
+		width: 100%;
+		outline: 1px solid black;
+		user-select: none;
+	}
 }
