--- a/src/components/Items/Items.module.scss
+++ b/src/components/Items/Items.module.scss
@@ -64,3 +64,12 @@
 .author {
 	flex: 0 1 50%;
 }
+
+.error {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	margin-top: 50px;
+	color: red;
+	font-size: 30px;
+}
