--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,4 +41,33 @@ html {
 .container {
 	max-width: 1600px;
 	margin: 0 auto;
+
+	@media (max-width: 1600px) {
+		max-width: 1400px;
+	}
+
+	@media (max-width: 1400px) {
+		max-width: 1200px;
+	}
+
+	@media (max-width: 1200px) {
+		max-width: none;
+	}
+	/* 
+	@media (max-width: 992px) {
+		max-width: 768px;
+	}
+
+	@media (max-width: 768px) {
+		max-width: 576px;
+	}
+
+	@media (max-width: 576px) {
+		max-width: 420px;
+	}
+
+	@media (max-width: 420px) {
+		max-width: 360px;
+	}
+     */
 }
