--- a/src/components/Aside/Banner/Banner.module.scss
+++ b/src/components/Aside/Banner/Banner.module.scss
@@ -12,4 +12,10 @@
 	&:hover {
 		outline: 3px solid #d5ac05;
 	}
+
+	@media (max-width: 1400px) {
+		width: 200px;
+		height: 200px;
+		margin: 0px auto 25px;
+	}
 }
