--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,14 +6,32 @@
 	flex-direction: row;
 	justify-content: space-between;
 	height: 100%;
+
+	@media (max-width: 992px) {
+		padding: 10px 15px;
+	}
+
+	@media (max-width: 768px) {
+		padding: 0px 10px;
+		flex-direction: column-reverse;
+		justify-content: flex-end;
+	}
 }
 
 .footer__left {
 	width: 75%;
+
+	@media (max-width: 768px) {
+		width: 100%;
+	}
 }
 
 .footer__right {
 	width: 25%;
+
+	@media (max-width: 768px) {
+		width: 100%;
+	}
 }
 
 .buttons {
@@ -28,6 +46,34 @@
 		&:hover {
 			color: #d5ac05;
 		}
+
+		@media (max-width: 1400px) {
+			margin-right: 15px;
+			font-size: 13px;
+		}
+
+		@media (max-width: 1200px) {
+			margin-right: 10px;
+			font-size: 12px;
+		}
+
+		@media (max-width: 550px) {
+			font-size: 10px;
+
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+
+		@media (max-width: 450px) {
+			font-size: 8px;
+		}
+	}
+
+	@media (max-width: 768px) {
+		display: flex;
+		justify-content: center;
+		margin-top: 10px;
 	}
 }
 
@@ -42,6 +88,19 @@
 
 	span {
 		font-size: 17px;
+
+		@media (max-width: 1600px) {
+			font-size: 15px;
+		}
+
+		@media (max-width: 1200px) {
+			font-size: 13px;
+		}
+	}
+
+	@media (max-width: 768px) {
+		display: flex;
+		justify-content: space-around;
 	}
 }
 
@@ -53,10 +112,30 @@
 	&:hover {
 		color: #d5ac05;
 	}
+
+	@media (max-width: 1200px) {
+		font-size: 13px;
+	}
 }
 
 .info {
 	margin-top: 15px;
 	width: 100%;
 	line-height: 1.3;
+
+	@media (max-width: 1400px) {
+		font-size: 13px;
+	}
+
+	@media (max-width: 768px) {
+		display: flex;
+		justify-content: center;
+		text-align: center;
+		font-size: 11px;
+		margin-top: 8px;
+	}
+
+	@media (max-width: 550px) {
+		font-size: 10px;
+	}
 }
