--- a/src/components/Player/Buttons/Buttons.module.scss
+++ b/src/components/Player/Buttons/Buttons.module.scss
@@ -14,5 +14,36 @@
 		&:hover {
 			color: #dcdcdc;
 		}
+
+		@media (max-width: 992px) {
+			font-size: 25px;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 20px;
+		}
+
+		@media (max-width: 576px) {
+			font-size: 15px;
+			margin-left: 12px;
+		}
+
+		@media (max-width: 490px) {
+			font-size: 12px;
+			margin-left: 10px;
+		}
+	}
+
+	@media (max-width: 992px) {
+		margin-right: 50px;
+	}
+
+	@media (max-width: 768px) {
+		margin-right: 25px;
+	}
+
+	@media (max-width: 576px) {
+		height: 60px;
+		margin-right: 15px;
 	}
 }
