--- a/src/components/Player/Controls/Controls.module.scss
+++ b/src/components/Player/Controls/Controls.module.scss
@@ -32,4 +32,27 @@
 	&.active {
 		color: #d5ac05;
 	}
+
+	@media (max-width: 992px) {
+		width: 30px;
+		font-size: 25px;
+	}
+
+	@media (max-width: 768px) {
+		font-size: 20px;
+		width: 20px;
+	}
+
+	@media (max-width: 576px) {
+		height: 60px;
+		font-size: 15px;
+		width: 15px;
+		margin-left: 12px;
+	}
+
+	@media (max-width: 490px) {
+		font-size: 12px;
+		width: 12px;
+		margin-left: 10px;
+	}
 }
