--- a/src/components/Player/Display/Display.module.scss
+++ b/src/components/Player/Display/Display.module.scss
@@ -1,5 +1,4 @@
 .wrapper {
-	display: flex;
 	height: 60px;
 }
 
@@ -8,12 +7,13 @@
 	flex-direction: column;
 	justify-content: center;
 	height: 100%;
+	width: 100%;
 }
 
 .name {
 	font-size: 16px;
 	font-weight: 600;
-	width: 100px;
+	width: 200px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -29,7 +29,7 @@
 
 .author {
 	font-size: 12px;
-	width: 100px;
+	width: 200px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
