--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -19,3 +19,32 @@
 		transition: transform 0.4s ease-in-out;
 	}
 }
+
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(36, 36, 36, 255);
+	z-index: 105;
+	overflow: auto;
+
+	&_enter {
+		opacity: 0;
+	}
+
+	&_enter_active {
+		opacity: 1;
+		transition: opacity 200ms ease-in-out;
+	}
+
+	&_exit_active {
+		opacity: 1;
+	}
+
+	&_exit {
+		opacity: 0;
+		transition: opacity 200ms ease-in-out;
+	}
+}
