--- a/src/components/Player/Controls/Controls.module.scss
+++ b/src/components/Player/Controls/Controls.module.scss
@@ -2,8 +2,12 @@
 	display: flex;
 	justify-content: space-between;
 
-	height: 100%;
+	height: 56px;
 	padding: 0px 20px;
+
+	@media (max-width: 768px) {
+		padding: 0px 10px;
+	}
 
 	div {
 		display: flex;
@@ -11,51 +15,97 @@
 }
 
 .buttons {
-	height: 100%;
+	display: flex;
+	justify-content: space-between;
+	width: 300px;
 
 	&:first-child {
 		margin-right: 50px;
+
+		@media (max-width: 992px) {
+			margin-right: 35px;
+		}
+
+		@media (max-width: 768px) {
+			margin-right: 25px;
+		}
+
+		@media (max-width: 576px) {
+			width: 135px;
+		}
+
+		@media (max-width: 490px) {
+			width: 108px;
+			margin-right: 15px;
+		}
 	}
-}
 
-button {
-	width: 50px;
-	height: 100%;
-	font-size: 30px;
-	margin-left: 15px;
-	color: #787575;
-	background-color: inherit;
-	cursor: pointer;
-	transition: color 0.3s ease;
+	&:last-child {
+		@media (max-width: 576px) {
+			width: 75px;
+			button:nth-child(2),
+			button:nth-child(3),
+			button:nth-child(4) {
+				display: none;
+			}
+		}
 
-	&:hover {
-		color: #dcdcdc;
+		@media (max-width: 490px) {
+			width: 60px;
+		}
 	}
 
-	&.active {
-		color: #d5ac05;
+	@media (max-width: 1250px) {
+		width: 200px;
 	}
 
 	@media (max-width: 992px) {
-		width: 30px;
-		font-size: 25px;
+		width: 150px;
 	}
 
-	@media (max-width: 768px) {
-		font-size: 20px;
-		width: 20px;
-	}
+	button {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 50px;
+		height: 100%;
+		font-size: 30px;
+		color: #787575;
+		background-color: inherit;
+		cursor: pointer;
+		transition: color 0.3s ease;
 
-	@media (max-width: 576px) {
-		height: 60px;
-		font-size: 15px;
-		width: 15px;
-		margin-left: 12px;
-	}
+		&:hover {
+			color: #dcdcdc;
+		}
 
-	@media (max-width: 490px) {
-		font-size: 12px;
-		width: 12px;
-		margin-left: 10px;
+		&.active {
+			color: #d5ac05;
+		}
+
+		@media (max-width: 1250px) {
+			width: 30px;
+			font-size: 25px;
+		}
+
+		@media (max-width: 992px) {
+			font-size: 20px;
+			width: 20px;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 20px;
+			width: 20px;
+		}
+
+		@media (max-width: 576px) {
+			font-size: 15px;
+			width: 15px;
+		}
+
+		@media (max-width: 490px) {
+			font-size: 12px;
+			width: 12px;
+		}
 	}
 }
