--- a/src/components/Player/Display/Display.module.scss
+++ b/src/components/Player/Display/Display.module.scss
@@ -1,45 +1,82 @@
 .wrapper {
-	height: 60px;
+	height: 100%;
 }
 
 .text {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	height: 100%;
 	width: 100%;
 }
 
 .name {
 	font-size: 16px;
 	font-weight: 600;
-	width: 200px;
+	width: 750px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 
+	@media (max-width: 1600px) {
+		width: 550px;
+	}
+
+	@media (max-width: 1400px) {
+		width: 400px;
+	}
+
+	@media (max-width: 1250px) {
+		width: 300px;
+		font-size: 14px;
+	}
+
 	@media (max-width: 768px) {
+		width: 250px;
 		font-size: 12px;
+	}
+
+	@media (max-width: 576px) {
+		width: 200px;
 	}
 
 	@media (max-width: 490px) {
 		font-size: 10px;
+		width: 160px;
 	}
 }
 
 .author {
 	font-size: 12px;
-	width: 200px;
+	width: 750px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 
+	@media (max-width: 1600px) {
+		width: 550px;
+	}
+
+	@media (max-width: 1400px) {
+		width: 400px;
+	}
+
+	@media (max-width: 1250px) {
+		width: 300px;
+		font-size: 11px;
+	}
+
 	@media (max-width: 768px) {
+		width: 250px;
 		font-size: 10px;
+	}
+
+	@media (max-width: 576px) {
+		width: 200px;
 	}
 
 	@media (max-width: 490px) {
 		font-size: 8px;
+		width: 160px;
 	}
 }
 
@@ -65,11 +102,10 @@
 
 	@media (max-width: 768px) {
 		width: 30px;
-		margin-right: 15px;
+		margin-right: 10px;
 	}
 
-	@media (max-width: 576px) {
-		width: 25px;
-		margin-right: 10px;
+	@media (max-width: 660px) {
+		display: none !important;
 	}
 }
