--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -29,22 +29,5 @@
 	background: rgba(36, 36, 36, 255);
 	z-index: 105;
 	overflow: auto;
-
-	&_enter {
-		opacity: 0;
-	}
-
-	&_enter_active {
-		opacity: 1;
-		transition: opacity 200ms ease-in-out;
-	}
-
-	&_exit_active {
-		opacity: 1;
-	}
-
-	&_exit {
-		opacity: 0;
-		transition: opacity 200ms ease-in-out;
-	}
+	transition: visibility 0.3s linear, opacity 0.3s linear;
 }
